[project]
name = "hjmpy"
version = "0.1.0"
description = ""
authors = [
    {name = "SarcasticMatrix"}
]
readme = "README.md"
requires-python = ">=3.10"


dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "pyqt6 (>=6.9.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "hjmpy", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
